--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">MedicMADO</string>
+    <string name="title_activity_onboard">OnboardActivity</string>
+    <string name="title_activity_login">LoginActivity</string>
 </resources>
