--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">MedicMADO</string>
     <string name="title_activity_onboard">OnboardActivity</string>
     <string name="title_activity_login">LoginActivity</string>
+    <string name="title_activity_code">CodeActivity</string>
 </resources>
